crates/rattler_build_recipe/src/stage0/parser/snapshots/rattler_build_recipe__stage0__parser__snapshot_tests__complex_recipe_snapshot.snap
---
source: crates/rattler_build_recipe/src/stage0/parser/snapshot_tests.rs
expression: "serde_yaml::to_string(&recipe).unwrap()"
---
package:
  name: ${{ name | lower }}
  version: ${{ version }}
build:
  script: {}
  python:
    entry_points: []
    skip_pyc_compilation: []
    use_python_app_entrypoint: false
  skip: []
  always_copy_files: []
  always_include_files: []
  merge_build_and_host_envs: false
  dynamic_linking:
    rpaths: []
    binary_relocation: true
    missing_dso_allowlist: []
    rpath_allowlist: []
  variant:
    use_keys: []
    ignore_keys: []
  prefix_detection:
    force_file_type:
      text: []
      binary: []
    ignore: false
    ignore_binary_files: false
  post_process: []
requirements:
  build:
  - ${{ compiler("c") }}
  - ${{ compiler("cxx") }}
  - if: unix
    then: make
  - if: win
    then: cmake
  host:
  - python ${{ python }}
  - setuptools >=45
  - wheel
  - if: build_type == "cuda"
    then: cuda-toolkit ${{ cuda_version }}
  run:
  - python ${{ python }}
  - numpy >=1.19,<2.0a0
  - ${{ pin_compatible("numpy") }}
  - if: linux
    then: libgcc-ng >=9.3.0
  - if: osx
    then: libcxx >=10.0.0
  - if: build_type == "cuda"
    then: cuda-toolkit ${{ cuda_version }}
  run_constraints:
  - scipy >=1.5,<2.0a0
  - if: extra_deps
    then: pandas >=1.0
  run_exports:
    strong:
    - ${{ pin_subpackage(name, max_pin="x.x") }}
    weak:
    - if: has_cpp_lib
      then: libstdcxx-ng >=9.3.0
  ignore_run_exports:
    by_name:
    - qt
    - tk
    from_package:
    - python
about:
  homepage: https://github.com/${{ org }}/${{ name }}
  license: ${{ license }}
  license_file:
  - LICENSE.txt
  summary: ${{ summary }}
  description: |
    ${{ description }}

    This is a multi-line description that can contain
    templates and other formatting.
  documentation: https://${{ name }}.readthedocs.io
  repository: https://github.com/${{ org }}/${{ name }}
extra:
  recipe-maintainers:
  - someone
  - otherone
