crates/rattler_build_recipe/src/stage0/parser/snapshots/rattler_build_recipe__stage0__parser__snapshot_tests__conditionals_recipe_snapshot.snap
---
source: crates/rattler_build_recipe/src/stage0/parser/snapshot_tests.rs
expression: "serde_yaml::to_string(&recipe).unwrap()"
---
package:
  name: conditional-package
  version: 1.5.0
build:
  script: {}
  python:
    entry_points: []
    skip_pyc_compilation: []
    use_python_app_entrypoint: false
  skip: []
  always_copy_files: []
  always_include_files: []
  merge_build_and_host_envs: false
  dynamic_linking:
    rpaths: []
    binary_relocation: true
    missing_dso_allowlist: []
    rpath_allowlist: []
  variant:
    use_keys: []
    ignore_keys: []
  prefix_detection:
    force_file_type:
      text: []
      binary: []
    ignore: false
    ignore_binary_files: false
  post_process: []
requirements:
  build:
  - gcc
  - if: win
    then: vs2019
    else: clang
  - if: unix
    then: make
  host:
  - python
  - if: linux
    then: patchelf
  run:
  - python
  - if: linux
    then: libgcc
  - if: osx
    then: libcxx
  - if: win
    then: msvc-runtime
  - ${{ compiler('c') }}
  - ${{ some_variable }}
  run_exports:
    strong:
    - conditional-package
    - if: cuda
      then: cuda-toolkit
    weak:
    - if: openmp
      then: libgomp
about:
  homepage: https://example.com/
  license: Apache-2.0
  summary: Package with conditional dependencies
extra:
  recipe-maintainers:
  - maintainer1
