crates/rattler_build_recipe/src/stage0/parser/snapshots/rattler_build_recipe__stage0__parser__snapshot_tests__full_recipe_snapshot.snap
---
source: crates/rattler_build_recipe/src/stage0/parser/snapshot_tests.rs
expression: "serde_yaml::to_string(&recipe).unwrap()"
---
package:
  name: full-package
  version: 2.5.1
build:
  script: {}
  python:
    entry_points: []
    skip_pyc_compilation: []
    use_python_app_entrypoint: false
  skip: []
  always_copy_files: []
  always_include_files: []
  merge_build_and_host_envs: false
  dynamic_linking:
    rpaths: []
    binary_relocation: true
    missing_dso_allowlist: []
    rpath_allowlist: []
  variant:
    use_keys: []
    ignore_keys: []
  prefix_detection:
    force_file_type:
      text: []
      binary: []
    ignore: false
    ignore_binary_files: false
  post_process: []
requirements:
  build:
  - gcc
  - make
  - cmake
  host:
  - python >=3.8
  - setuptools
  run:
  - python >=3.8
  - numpy >=1.19
  run_constraints:
  - scipy <2.0
about:
  homepage: https://example.com/
  license: MIT
  license_file:
  - LICENSE
  summary: A comprehensive test package
  description: This package demonstrates all available fields in a recipe
  documentation: https://docs.example.com/
  repository: https://github.com/example/full-package
extra:
  recipe-maintainers:
  - alice
  - bob
  - charlie
