crates/rattler_build_recipe/src/stage0/parser/snapshots/rattler_build_recipe__stage0__parser__snapshot_tests__multi_output_conditionals_snapshot.snap
---
source: crates/rattler_build_recipe/src/stage0/parser/snapshot_tests.rs
expression: "serde_yaml::to_string(&recipe).unwrap()"
---
schema_version: 1
recipe:
  name: conditional-pkg
  version: 3.0.0
build:
  script: {}
  python:
    entry_points: []
    skip_pyc_compilation: []
    use_python_app_entrypoint: false
  skip: []
  always_copy_files: []
  always_include_files: []
  merge_build_and_host_envs: false
  dynamic_linking:
    rpaths: []
    binary_relocation: true
    missing_dso_allowlist: []
    rpath_allowlist: []
  variant:
    use_keys: []
    ignore_keys: []
  prefix_detection:
    force_file_type:
      text: []
      binary: []
    ignore: false
    ignore_binary_files: false
  post_process: []
about: {}
extra: {}
outputs:
- staging:
    name: build-stage
  requirements:
    build:
    - if: unix
      then:
      - gcc
      - make
      else: msvc
    - cmake
    host:
    - if: linux
      then: glibc
    - if: osx
      then: libcxx
  build:
    script:
      content:
      - if: unix
        then: make all
        else: nmake all
- package:
    name: conditional-pkg
    version: 3.0.0
  inherit: build-stage
  requirements:
    run:
    - if: linux
      then:
      - libgcc-ng
      - libstdcxx-ng
    - if: osx
      then: libcxx
    - if: win
      then: vs2019-runtime
  build:
    script: {}
    python:
      entry_points: []
      skip_pyc_compilation: []
      use_python_app_entrypoint: false
    skip: []
    always_copy_files: []
    always_include_files: []
    merge_build_and_host_envs: false
    dynamic_linking:
      rpaths: []
      binary_relocation: true
      missing_dso_allowlist: []
      rpath_allowlist: []
    variant:
      use_keys: []
      ignore_keys: []
    prefix_detection:
      force_file_type:
        text: []
        binary: []
      ignore: false
      ignore_binary_files: false
    post_process: []
  about:
    license: BSD-3-Clause
    summary: Package with platform-specific dependencies
  tests:
  - script:
      content:
      - if: unix
        then: test -f $PREFIX/bin/conditional-pkg
      - if: win
        then: if not exist %PREFIX%\\Library\\bin\\conditional-pkg.exe exit 1
