crates/rattler_build_recipe/src/stage0/parser/snapshots/rattler_build_recipe__stage0__parser__snapshot_tests__multi_output_full_snapshot.snap
---
source: crates/rattler_build_recipe/src/stage0/parser/snapshot_tests.rs
expression: "serde_yaml::to_string(&recipe).unwrap()"
---
schema_version: 1
context:
  version: 2.5.0
  build_number: '0'
recipe:
  name: complex-project
  version: ${{ version }}
source:
- url:
  - https://github.com/example/project/archive/v${{ version }}.tar.gz
  sha256: e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855
  filter: []
build:
  number: ${{ build_number }}
  script: {}
  python:
    entry_points: []
    skip_pyc_compilation: []
    use_python_app_entrypoint: false
  skip: []
  always_copy_files: []
  always_include_files: []
  merge_build_and_host_envs: false
  dynamic_linking:
    rpaths: []
    binary_relocation: true
    missing_dso_allowlist: []
    rpath_allowlist: []
  variant:
    use_keys: []
    ignore_keys: []
  prefix_detection:
    force_file_type:
      text: []
      binary: []
    ignore: false
    ignore_binary_files: false
  post_process: []
about:
  homepage: https://example.com/
  license: Apache-2.0
  summary: A complex multi-output project
extra:
  recipe-maintainers:
  - alice
  - bob
outputs:
- staging:
    name: core-build
  requirements:
    build:
    - ${{ compiler('c') }}
    - ${{ compiler('cxx') }}
    - cmake
    - ninja
    host:
    - zlib
    - openssl
    ignore_run_exports:
      by_name:
      - openssl
  build:
    script:
      content:
      - cmake -GNinja -DCMAKE_BUILD_TYPE=Release .
      - ninja
- staging:
    name: python-build
  requirements:
    build:
    - python
    - setuptools
    - wheel
    host:
    - python
    - pybind11
  build:
    script:
      content:
      - python setup.py build_ext
- package:
    name: libcomplex
    version: ${{ version }}
  inherit:
    from: core-build
    run_exports: true
  requirements:
    run:
    - zlib
  build:
    script: {}
    python:
      entry_points: []
      skip_pyc_compilation: []
      use_python_app_entrypoint: false
    skip: []
    always_copy_files: []
    always_include_files: []
    merge_build_and_host_envs: false
    dynamic_linking:
      rpaths: []
      binary_relocation: true
      missing_dso_allowlist: []
      rpath_allowlist: []
    variant:
      use_keys: []
      ignore_keys: []
    prefix_detection:
      force_file_type:
        text: []
        binary: []
      ignore: false
      ignore_binary_files: false
    post_process: []
  about:
    license: Apache-2.0
    summary: Complex project core library
  tests:
  - script:
      content:
      - test -f $PREFIX/lib/libcomplex.so
- package:
    name: py-complex
    version: ${{ version }}
  inherit: python-build
  requirements:
    run:
    - python
    - libcomplex ${{ version }}.*
  build:
    script: {}
    python:
      entry_points: []
      skip_pyc_compilation: []
      use_python_app_entrypoint: false
    skip: []
    always_copy_files: []
    always_include_files: []
    merge_build_and_host_envs: false
    dynamic_linking:
      rpaths: []
      binary_relocation: true
      missing_dso_allowlist: []
      rpath_allowlist: []
    variant:
      use_keys: []
      ignore_keys: []
    prefix_detection:
      force_file_type:
        text: []
        binary: []
      ignore: false
      ignore_binary_files: false
    post_process: []
  about:
    license: Apache-2.0
    summary: Python bindings for complex project
    description: |
      This package provides Python bindings for the complex project.
      It allows you to use complex project functionality from Python.
  tests:
  - python:
      imports:
      - complex
      - complex.core
- package:
    name: libcomplex-dev
    version: ${{ version }}
  inherit: null
  requirements:
    run:
    - libcomplex ${{ version }}.*
  build:
    script: {}
    python:
      entry_points: []
      skip_pyc_compilation: []
      use_python_app_entrypoint: false
    skip: []
    always_copy_files: []
    always_include_files: []
    merge_build_and_host_envs: false
    dynamic_linking:
      rpaths: []
      binary_relocation: true
      missing_dso_allowlist: []
      rpath_allowlist: []
    variant:
      use_keys: []
      ignore_keys: []
    prefix_detection:
      force_file_type:
        text: []
        binary: []
      ignore: false
      ignore_binary_files: false
    post_process: []
  about:
    license: Apache-2.0
    summary: Development headers for complex project
