crates/rattler_build_recipe/src/stage0/parser/snapshots/rattler_build_recipe__stage0__parser__snapshot_tests__multi_output_minimal_snapshot.snap
---
source: crates/rattler_build_recipe/src/stage0/parser/snapshot_tests.rs
expression: "serde_yaml::to_string(&recipe).unwrap()"
---
schema_version: 1
recipe:
  name: myproject
  version: 1.0.0
source:
- url:
  - https://example.com/source.tar.gz
  sha256: e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855
  filter: []
build:
  script: {}
  python:
    entry_points: []
    skip_pyc_compilation: []
    use_python_app_entrypoint: false
  skip: []
  always_copy_files: []
  always_include_files: []
  merge_build_and_host_envs: false
  dynamic_linking:
    rpaths: []
    binary_relocation: true
    missing_dso_allowlist: []
    rpath_allowlist: []
  variant:
    use_keys: []
    ignore_keys: []
  prefix_detection:
    force_file_type:
      text: []
      binary: []
    ignore: false
    ignore_binary_files: false
  post_process: []
about: {}
extra: {}
outputs:
- staging:
    name: build-cache
  source:
  - url:
    - https://example.com/build-source.tar.gz
    sha256: e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855
    filter: []
  requirements:
    build:
    - gcc
    - cmake
    host:
    - zlib
  build:
    script:
      content:
      - cmake -S . -B build
      - cmake --build build
- package:
    name: mylib
    version: 1.0.0
  inherit: build-cache
  requirements:
    run:
    - libgcc
  build:
    script: {}
    python:
      entry_points: []
      skip_pyc_compilation: []
      use_python_app_entrypoint: false
    skip: []
    always_copy_files: []
    always_include_files: []
    merge_build_and_host_envs: false
    dynamic_linking:
      rpaths: []
      binary_relocation: true
      missing_dso_allowlist: []
      rpath_allowlist: []
    variant:
      use_keys: []
      ignore_keys: []
    prefix_detection:
      force_file_type:
        text: []
        binary: []
      ignore: false
      ignore_binary_files: false
    post_process: []
  about:
    license: MIT
    summary: My awesome library
