crates/rattler_build_recipe/src/stage0/parser/snapshots/rattler_build_recipe__stage0__parser__snapshot_tests__multi_output_templates_snapshot.snap
---
source: crates/rattler_build_recipe/src/stage0/parser/snapshot_tests.rs
expression: "serde_yaml::to_string(&recipe).unwrap()"
---
schema_version: 1
context:
  name: templated-pkg
  version: 1.2.3
  major_minor: ${{ version.split('.')[0] }}.{{ version.split('.')[1] }}
  python_version: '3.11'
  staging_name: ${{ name }}-staging
recipe:
  name: ${{ name }}
  version: ${{ version }}
build:
  script: {}
  python:
    entry_points: []
    skip_pyc_compilation: []
    use_python_app_entrypoint: false
  skip: []
  always_copy_files: []
  always_include_files: []
  merge_build_and_host_envs: false
  dynamic_linking:
    rpaths: []
    binary_relocation: true
    missing_dso_allowlist: []
    rpath_allowlist: []
  variant:
    use_keys: []
    ignore_keys: []
  prefix_detection:
    force_file_type:
      text: []
      binary: []
    ignore: false
    ignore_binary_files: false
  post_process: []
about: {}
extra: {}
outputs:
- staging:
    name: ${{ staging_name }}
  requirements:
    build:
    - ${{ compiler('c') }}
    - if: unix
      then: make
    - if: win
      then: nmake
    host:
    - python ${{ python_version }}
  build:
    script:
      content:
      - if: unix
        then: make -j${{ CPU_COUNT }}
      - if: win
        then: nmake
- package:
    name: ${{ name }}
    version: ${{ version }}
  inherit: ${{ staging_name }}
  requirements:
    run:
    - python ${{ python_version }}.*
    - ${{ pin_subpackage(name ~ "-lib", max_pin="x.x") }}
  build:
    script: {}
    python:
      entry_points: []
      skip_pyc_compilation: []
      use_python_app_entrypoint: false
    skip: []
    always_copy_files: []
    always_include_files: []
    merge_build_and_host_envs: false
    dynamic_linking:
      rpaths: []
      binary_relocation: true
      missing_dso_allowlist: []
      rpath_allowlist: []
    variant:
      use_keys: []
      ignore_keys: []
    prefix_detection:
      force_file_type:
        text: []
        binary: []
      ignore: false
      ignore_binary_files: false
    post_process: []
  about:
    homepage: https://example.com/${{ name }}
    license: MIT
    summary: Package ${{ name }} version ${{ version }}
- package:
    name: ${{ name }}-lib
    version: ${{ version }}
  inherit: ${{ staging_name }}
  requirements:
    run:
    - libgcc-ng
  build:
    script: {}
    python:
      entry_points: []
      skip_pyc_compilation: []
      use_python_app_entrypoint: false
    skip: []
    always_copy_files: []
    always_include_files: []
    merge_build_and_host_envs: false
    dynamic_linking:
      rpaths: []
      binary_relocation: true
      missing_dso_allowlist: []
      rpath_allowlist: []
    variant:
      use_keys: []
      ignore_keys: []
    prefix_detection:
      force_file_type:
        text: []
        binary: []
      ignore: false
      ignore_binary_files: false
    post_process: []
  about:
    license: MIT
    summary: Library for ${{ name }}
