crates/rattler_build_recipe/src/stage0/parser/snapshots/rattler_build_recipe__stage0__parser__snapshot_tests__run_exports_recipe_snapshot.snap
---
source: crates/rattler_build_recipe/src/stage0/parser/snapshot_tests.rs
expression: "serde_yaml::to_string(&recipe).unwrap()"
---
package:
  name: library-with-exports
  version: 3.2.1
build:
  script: {}
  python:
    entry_points: []
    skip_pyc_compilation: []
    use_python_app_entrypoint: false
  skip: []
  always_copy_files: []
  always_include_files: []
  merge_build_and_host_envs: false
  dynamic_linking:
    rpaths: []
    binary_relocation: true
    missing_dso_allowlist: []
    rpath_allowlist: []
  variant:
    use_keys: []
    ignore_keys: []
  prefix_detection:
    force_file_type:
      text: []
      binary: []
    ignore: false
    ignore_binary_files: false
  post_process: []
requirements:
  build:
  - gcc
  host:
  - python
  run:
  - python
  run_exports:
    noarch:
    - library-with-exports-noarch
    strong:
    - library-with-exports
    - libfoo >=1.0
    strong_constraints:
    - libbar <2.0
    weak:
    - optional-dep
    weak_constraints:
    - another-optional <3.0
  ignore_run_exports:
    by_name:
    - ignored-lib
    - another-ignored
    from_package:
    - problematic-package
about:
  homepage: https://example.com/
  license: BSD-3-Clause
  summary: Library that exports dependencies
extra:
  recipe-maintainers:
  - maintainer
