crates/rattler_build_recipe/src/stage0/parser/snapshots/rattler_build_recipe__stage0__parser__snapshot_tests__script_parsing_snapshot.snap
---
source: crates/rattler_build_recipe/src/stage0/parser/snapshot_tests.rs
expression: "serde_yaml::to_string(&recipe).unwrap()"
---
package:
  name: test-script-parsing
  version: 0.1.0
build:
  script: {}
  python:
    entry_points: []
    skip_pyc_compilation: []
    use_python_app_entrypoint: false
  skip: []
  always_copy_files: []
  always_include_files: []
  merge_build_and_host_envs: false
  dynamic_linking:
    rpaths: []
    binary_relocation: true
    missing_dso_allowlist: []
    rpath_allowlist: []
  variant:
    use_keys: []
    ignore_keys: []
  prefix_detection:
    force_file_type:
      text: []
      binary: []
    ignore: false
    ignore_binary_files: false
  post_process: []
requirements: {}
about: {}
extra: {}
tests:
- script:
    content:
    - test.sh
- script:
    content:
    - echo "hello list"
    - echo "of commands"
    - echo "in a script"
- script:
    content:
    - if: unix
      then: echo "This is a unix-like system"
      else: echo "This is not a unix-like system"
- script:
    content:
    - |
      #!/usr/bin/env bash
      echo "This is a script provided as content"
- script:
    interpreter: bash
    content:
    - |
      echo "This is a script provided as content"
- script:
    file: test.sh
- script:
    interpreter: bash
    file: test.sh
- script:
    env:
      TEST_ENV: Hello, world!
      FOOBAR: '42'
    content:
    - |
      echo "This is a script with environment variables"
