crates/rattler_build_recipe/src/stage0/parser/snapshots/rattler_build_recipe__stage0__parser__snapshot_tests__templates_recipe_snapshot.snap
---
source: crates/rattler_build_recipe/src/stage0/parser/snapshot_tests.rs
expression: "serde_yaml::to_string(&recipe).unwrap()"
---
package:
  name: ${{ name }}
  version: ${{ version }}
build:
  script: {}
  python:
    entry_points: []
    skip_pyc_compilation: []
    use_python_app_entrypoint: false
  skip: []
  always_copy_files: []
  always_include_files: []
  merge_build_and_host_envs: false
  dynamic_linking:
    rpaths: []
    binary_relocation: true
    missing_dso_allowlist: []
    rpath_allowlist: []
  variant:
    use_keys: []
    ignore_keys: []
  prefix_detection:
    force_file_type:
      text: []
      binary: []
    ignore: false
    ignore_binary_files: false
  post_process: []
requirements:
  build:
  - ${{ compiler("c") }}
  - ${{ compiler("cxx") }}
  host:
  - python ${{ python }}
  run:
  - python ${{ python }}
  - ${{ pin_subpackage("mylib", max_pin="x.x") }}
about:
  homepage: ${{ homepage }}
  license: ${{ license }}
  summary: ${{ name }} - version ${{ version }}
  description: A templated package for ${{ platform }}
extra:
  recipe-maintainers:
  - foobar
